# Editor

./: .gitignore  CMakeLists.txt  Editor  main.cpp
include/Editor/: Editor.hpp
include/Window/: Window.hpp
src/: Editor.cpp
